manifests/wireguard-client.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: wireguard
  name: wireguard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
spec:
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - name: wireguard
          image: linuxserver/wireguard:1.0.20210914
          ports:
            - containerPort: 51820
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
          volumeMounts:
            - mountPath: "/config/wg_confs"
              name: wireguard-secret
        - name: watcher
          image: busybox:1.37.0
          command:
            - sh
            - -c
            - ping -i 5 172.16.245.1
      volumes:
        - name: wireguard-secret
          secret:
            secretName: wireguard
