manifests/wireguard-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: wireguard
  name: wireguard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: wireguard
  labels:
  name: wireguard
  namespace: wireguard
spec:
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
      - name: wireguard
        image: linuxserver/wireguard:latest
        ports:
        - containerPort: 51820
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
          privileged: true
        volumeMounts:
        - mountPath: "/config/"
          name: wireguard-config
      volumes:
      - emptyDir: {}
        name: wireguard-config
      - name: wireguard-secret
        secret:
          secretName: wireguard
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
spec:
  type: NodePort
  selector:
    app: wireguard
  ports:
    - protocol: UDP
      port: 51820
      targetPort: 51820
      nodePort: 32813
