manifests/proxy-over-kube.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ep-ext
  namespace: proxy
subsets:
  - addresses:
      - ip: 172.31.2.55
    ports:
      - port: 443
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ep-ext
  namespace: proxy
  labels:
    proxy: ep
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ep-ext
  namespace: proxy
  labels:
    proxy: ep
  annotations:
    kubernetes.io/ingress.class: frontend-ingress
    kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - ep.mail.com
      secretName: cbt-wild
  rules:
    - host: ep.mail.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ep-ext
              servicePort: 443
