manifests/networkpolicy.yaml
# Пример deny-all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  # Выбираем все поды
  # И не определяем откуда можно
  podSelector: {}
  policyTypes:
  - Ingress
---
# Пример allow-all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: default
spec:
  # Выбираем все поды
  podSelector: {}
  ingress:
  # И разрешаем всё
  - {}
  policyTypes:
  - Ingress
